--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "react-native-autocomplete-input": "^5.0.0",
     "react-native-elements": "^3.4.1",
     "react-native-web": "~0.13.12",
-    "react-redux": "^7.2.4"
+    "react-redux": "^7.2.4",
+    "redux-thunk": "2.3.0"
   },
   "devDependencies": {
     "@babel/core": "^7.9.0"
